--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -213,7 +213,13 @@
 
 \DeclareAcronym{rel}{
   short = \tsc{rel} ,
-  long  = relative ,
+  long  = relative marker,
+  tag = abbr
+}
+
+\DeclareAcronym{rp}{
+  short = \tsc{rp} ,
+  long  = relative pronoun,
   tag = abbr
 }
 
