--- a/languages-without-case-competition.tex
+++ b/languages-without-case-competition.tex
@@ -113,10 +113,10 @@ I start with Old English. I give an example in which the external case is more c
 Consider the example in \ref{ex:oe-dat-nom}.
 The internal case is nominative, as the predicate \tit{gegyltan} `to sin' takes nominative subjects.
 The external case is dative, as the predicate \tit{for-gifan} `to forgive' takes dative objects.
-The relative pronoun \tit{ðam} `\ac{rel}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{ðam} `\tsc{rp}}.\ac{dat}.\ac{pl}' appears in the external case: the dative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. ðæt is, ðæt man for-gife, ðam \tbf{ðe} \tbf{wið} \tbf{hine} \tbf{gegylte}\\
- that is that one forgive.\ac{subj}.\ac{sg}\scsub{[dat]} \ac{rel}.\ac{dat}.\ac{pl} \ac{comp} against 3\ac{sg}.\ac{m}.\ac{acc} sin.3\ac{sg}\scsub{[nom]}\\
+ that is that one forgive.\ac{subj}.\ac{sg}\scsub{[dat]} \tsc{rp}}.\ac{dat}.\ac{pl} \ac{comp} against 3\ac{sg}.\ac{m}.\ac{acc} sin.3\ac{sg}\scsub{[nom]}\\
  `that is, that one₂ forgive him₁, who sins against him₂' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{549}} \label{ex:oe-dat-nom}
 
 This example is compatible with three patterns. First, Old English could be a case competition language that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:oe-poss1}, and I mark the cell that corresponds to example \ref{ex:oe-dat-nom} in gray.
@@ -224,11 +224,11 @@ In the example that follows I show that Old English is of the type in Table \ref
 Consider the example in \ref{ex:oe-acc-dat}.
 The internal case is dative, as the preposition \tit{onuppan} `upon' takes dative objects.
 The external case is accusative, as the predicate \tit{tōbrȳsan} `to pulversize' takes accusative objects.
-The relative pronoun \tit{ðone} `\ac{rel}.\ac{sg}.\ac{acc}' appears in the external case: the accusative.
+The relative pronoun \tit{ðone} `\tsc{rp}}.\ac{sg}.\ac{acc}' appears in the external case: the accusative.
 The relative pronoun appears in the external case, although it is the least complex case of the two. The example is grammatical, because Old English does not show case competition, so the case scale is irrelevant. As long as the relative pronoun appears in the external case, the headless relative is grammatical.
 
 \exg. he tobryst ðone \tbf{ðe} \tbf{he} \tbf{onuppan} \tbf{fylð}\\
- it pulverizes\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{acc} \ac{comp} it upon\scsub{[dat]} falls\\
+ it pulverizes\scsub{[acc]} \tsc{rp}}.\ac{sg}.\ac{acc} \ac{comp} it upon\scsub{[dat]} falls\\
 `It pulverizes him whom it falls upon.' \flushfill{Old English, adapted from \pgcitealt{harbert1983}{550}} \label{ex:oe-acc-dat}
 
 This example shows that Old English is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
@@ -271,10 +271,10 @@ The same pattern appears in Modern Greek. The only difference is that Modern Gre
 Consider the example in \ref{ex:greek-acc-nom}.
 The internal case is nominative, as the predicate \tit{voíθisó} `to help' takes nominative subjects.
 The external case is accusative, as the predicate \tit{efχarístisó} `to thank' takes accusative objects.
-The relative pronoun \tit{ópjus} `\ac{rel}.\ac{pl}.\ac{m}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{ópjus} `\tsc{rp}}.\ac{pl}.\ac{m}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, unlike the relative clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. Efχarístisa ópjus \tbf{me} \tbf{voíϑisan}.\\
-thank.\ac{pst}.3\ac{pl}\scsub{[acc]} \ac{rel}.\ac{pl}.\ac{m}.\ac{acc} \ac{cl}.1\ac{sg}.\ac{acc} help.\ac{pst}.3\ac{pl}\scsub{[nom]}\\
+thank.\ac{pst}.3\ac{pl}\scsub{[acc]} \tsc{rp}}.\ac{pl}.\ac{m}.\ac{acc} \ac{cl}.1\ac{sg}.\ac{acc} help.\ac{pst}.3\ac{pl}\scsub{[nom]}\\
 `I thanked whoever helped me.' \flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-acc-nom}
 
 This example is compatible with three patterns. First, Modern Greek could be a case competition language that only allows the external case to surface. I repeat Table \ref{tbl:case-competition-only-ext-repeated} from Section \ref{sec:pattern-iii} as Table \ref{tbl:greek-poss1}, and I mark the cell that corresponds to example \ref{ex:greek-acc-nom} in gray.
@@ -382,17 +382,17 @@ In the example that follows I show that Modern Greek is of the type in Table \re
 Consider the example in \ref{ex:greek-nom-acc}.
 The internal case is accusative, as the predicate \tit{irθó} `to invite' takes accusative objects.
 The external case is nominative, as the predicate \tit{kálesó} `to come' takes nominative subjects.
-The relative pronoun \tit{ópji} `\ac{rel}.\ac{pl}.\ac{m}.\ac{nom}' appears in the external case: the nominative.
+The relative pronoun \tit{ópji} `\tsc{rp}}.\ac{pl}.\ac{m}.\ac{nom}' appears in the external case: the nominative.
 The relative pronoun appears in the external case, although it is the least complex case of the two. The example is grammatical, because Modern Greek does not show case competition, so the case scale is irrelevant. As long as the relative pronoun appears in the external case, the headless relative is grammatical.
 
 \exg. Irθan ópji \tbf{káleses}.\\
-come.\ac{pst}.3\ac{pl}\scsub{[nom]} \ac{rel}.\ac{pl}.\ac{m}.\ac{nom} invite.\ac{pst}.2\ac{sg}\scsub{[acc]}\\
+come.\ac{pst}.3\ac{pl}\scsub{[nom]} \tsc{rp}}.\ac{pl}.\ac{m}.\ac{nom} invite.\ac{pst}.2\ac{sg}\scsub{[acc]}\\
 `Whoever you invited came.'\flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-nom-acc}
 
 The example in \ref{ex:greek-nom-acc-u} is identical to \ref{ex:greek-nom-acc}, except for that the relative pronoun appears in the internal  more complex case. This example is ungrammatical: the relative pronoun does not appear in the external case. The fact that the internal case is more complex is irrelevant.
 
 \exg. *Irθan \tbf{ópjus} \tbf{káleses}.\\
-come.\ac{pst}.3\ac{pl}\scsub{[nom]} \ac{rel}.\ac{pl}.\ac{m}.\ac{acc} invite.\ac{pst}.2\ac{sg}\scsub{[acc]}\\
+come.\ac{pst}.3\ac{pl}\scsub{[nom]} \tsc{rp}}.\ac{pl}.\ac{m}.\ac{acc} invite.\ac{pst}.2\ac{sg}\scsub{[acc]}\\
 `Whoever you invited came.'\flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{79}}\label{ex:greek-nom-acc-u}
 
 This example shows that Modern Greek is neither an instance of the pattern in Section \ref{sec:pattern-iii}, in which only the external case is allowed to surface, nor is it an instance of the pattern in Section \ref{sec:pattern-i}, in which the internal case and external case are allowed to surface.
@@ -433,13 +433,13 @@ There is something more to be said about the situation in Modern Greek. When the
 Consider the example in \ref{ex:greek-nom-gen}.
 The internal case is genitive, as the predicate \tit{eðósó} `to give' takes genitive objects.
 The external case is accusative, as the predicate \tit{efχarístisó} `to thank' takes nominative subjects.
-The relative pronoun \tit{ópjon} `\ac{rel}.\ac{pl}.\ac{m}.\ac{nom}' appears in the external case: the nominative.
+The relative pronoun \tit{ópjon} `\tsc{rp}}.\ac{pl}.\ac{m}.\ac{nom}' appears in the external case: the nominative.
 The relative pronoun appears in the external case, although it is the least complex case of the two. The example is grammatical, because Modern Greek does not show case competition, so the case scale is irrelevant. As long as the relative pronoun appears in the external case, the headless relative is grammatical. In addition, the relative clause obligatorily contains the genitive clitic \tit{tus} `\ac{cl}.3\ac{pl}.\ac{gen}'.\footnote{
 In Modern German, it is possible to insert a light head to resolve a situation with a more complex external case. However, then the relative pronoun has to change as well (from a \tsc{wh}-pronoun into a \tsc{d}-pronoun). I assume this is a different construction, and the Modern Greek one with the clitic inserted is not.
 }
 
 \exg. Me efχarístisan ópji \tbf{tus} \tbf{íχa} \tbf{ðósi} \tbf{leftá}.\\
- \ac{cl}.1\ac{sg}.\ac{acc} thank.\ac{pst}.3\ac{pl}\scsub{[nom]} \ac{rel}.\ac{pl}.\ac{m}.\ac{nom} \ac{cl}.3\ac{pl}.\ac{gen} have.\ac{pst}.1\ac{sg} give.\ac{ptcp}\scsub{[gen]} money\\
+ \ac{cl}.1\ac{sg}.\ac{acc} thank.\ac{pst}.3\ac{pl}\scsub{[nom]} \tsc{rp}}.\ac{pl}.\ac{m}.\ac{nom} \ac{cl}.3\ac{pl}.\ac{gen} have.\ac{pst}.1\ac{sg} give.\ac{ptcp}\scsub{[gen]} money\\
  `Whoever I had given money to, thanked me.'\flushfill{Modern Greek, adapted from \pgcitealt{daskalaki2011}{80}}\label{ex:greek-nom-gen}
 
 This once again confirms the picture of Modern Greek always letting the relative pronoun surface in the external case. The internal case is taken care of by the clitic, which is independent of the relative clause construction.
@@ -449,10 +449,10 @@ When the relative clause is dislocated, both the internal and the external case 
 
 \ex.
 \ag. ópjos/ ópjon epiléksume θa pári to vravío\\
-\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}/\ac{rel}.\ac{sg}.\ac{m}.\ac{acc} choose.1\tsc{pl}\scsub{[acc]} \tsc{fut} take.3\tsc{sg}\scsub{[nom]} the price.\tsc{acc}\\
+\tsc{rp}}.\ac{sg}.\ac{m}.\ac{nom}/\tsc{rp}}.\ac{sg}.\ac{m}.\ac{acc} choose.1\tsc{pl}\scsub{[acc]} \tsc{fut} take.3\tsc{sg}\scsub{[nom]} the price.\tsc{acc}\\
 `Whoever we may choose, he will get the price.'\label{ex:greek-dislocated-acc-nom}
 \bg. ópjos/ ópjon me aɣapá ton aɣapó\\
-\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}/\ac{rel}.\ac{sg}.\ac{m}.\ac{acc} \ac{cl}.1\ac{sg}.\ac{acc} love.3\tsc{sg}\scsub{[nom]}
+\tsc{rp}}.\ac{sg}.\ac{m}.\ac{nom}/\tsc{rp}}.\ac{sg}.\ac{m}.\ac{acc} \ac{cl}.1\ac{sg}.\ac{acc} love.3\tsc{sg}\scsub{[nom]}
 \ac{cl}.3\ac{sg}.\ac{m}.\ac{acc} love.1\tsc{sg}\scsub{[acc]}\\
 `Whoever loves me, I love him.'\label{ex:greek-dislocated-nom-acc}
 
