--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -22,29 +22,29 @@ The description of Gothic is mostly based on \citep{harbert1978}. The spelling o
 Consider the example in \ref{ex:gothic-nom-nom}, in which the internal nominative case competes against the external nominative case.
 The internal case is nominative, as the predicate \tit{matjan} `to eat' takes nominative subjects.
 The external case is nominative as well, as the predicate \tit{ga-dauþnan} `to die' also takes nominative subjects.
-The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
+The relative pronoun \tit{sa} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
 
 \exg. ei \tbf{sa} \tbf{-ei} \tbf{þis} \tbf{matjai}, ni gadauþnai\\
-\ac{comp} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
+\ac{comp} \ac{rp}}.\ac{sg}.\ac{m}.\ac{nom} -\ac{comp} \ac{dem}.\ac{sg}.\ac{m}.\ac{gen} eat.\ac{opt}.3\ac{sg}\scsub{[nom]} not die.\ac{opt}.3\ac{sg}\scsub{[nom]}\\
 `that the one, who eats of this may not die' \flushfill{Gothic, \ac{john} 6:50, after \pgcitealt{harbert1978}{337}}\label{ex:gothic-nom-nom}
 
 Consider the example in \ref{ex:gothic-acc-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external accusative case.
 
 The internal case is accusative, as the predicate \tit{arman} `to pity' takes accusative objects.
 The external case is accusative as well, as the predicate \tit{ga-arman} `to pity' also takes accusative objects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
+The relative pronoun \tit{þan(a)} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
 
 \exg. gaarma \tbf{þan} \tbf{-ei} \tbf{arma}\\
- pity.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
+ pity.1\ac{sg}\scsub{[acc]} \ac{rp}}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
  `I pity him, whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
 Consider the example in \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case.
 The internal case is dative, as the predicate \tit{manwjan} `to prepare' takes dative indirect objects.
 The external case is dative as well, as the predicate \tit{giban} `to give' also takes dative indirect objects.
-The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
+The relative pronoun \tit{þaim)} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
 
 \exg. nist mein du giban, alja \tbf{þaim} \tbf{-ei} \tbf{manwiþ} \tbf{was}\\
-{is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
+{is not} 1\ac{sg}.\ac{poss}.\ac{nom} to give.\ac{inf}\scsub{[dat]} {except for} \ac{rp}}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} prepare.\ac{ptcp} be.\ac{pret}.3\ac{sg}\scsub{[dat]}\\
 `it is not mine to give except for to the one, for whom it was prepared'\flushfill{Gothic, \ac{mark} 10:49, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-dat}
 
 These findings can be summarized as in Table \ref{tbl:summary-gothic-matching}. The left column shows the internal case (\ac{int}) between square brackets. The upper row shows the external case (\ac{ext}) between square brackets. The other cells indicate the case of the relative pronoun. The top-left to bottom-right diagonal corresponds to the examples I have given so far in which the internal and external case match. The nominative marked in light gray corresponds to \ref{ex:gothic-nom-nom}, in which the internal nominative case competes ains] the external nominative case, and the relative pronoun surfaces in the nominative case. The accusative marked in dark gray corresponds to \ref{ex:gothic-acc-acc}, in which the internal accusative case competes against the external accusative case, and the relative pronoun surfaces in the accusative case. The unmarked dative corresponds to \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case, and the relative pronoun surfaces in the dative case.
@@ -93,21 +93,21 @@ I start with the competition between the accusative and the nominative. Followin
 Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
 The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
 The external case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þan(a)} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ \ac{rp}}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-acc-rep}
 
 Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduction. In this example, the the internal nominative case competes against the external accusative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{ussiggwan} `to read' takes accusative objects.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þo} `\ac{rp}}.\ac{sg}.\ac{n}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
+ and \ac{rp}}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-acc-nom-rep}
 
 The two examples in which the nominative and the accusative compete are showed in Table \ref{tbl:summary-gothic-nom-acc}. Within the newly filled out cells, two cases are given. The case in the bottom-left corner stands for the relative pronoun in the internal case. The case in the top-right corner stands for the relative pronoun in the external case. The grammatical examples are marked in light and dark gray. The unattested examples are preceded by an asterix and are unmarked.\footnote{
@@ -151,21 +151,21 @@ I continue with the competition between the dative and the nominative. Following
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal dative case competes against the external nominative case.
 The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
 The external case is nominative, as the predicate \tit{frijon} `to love' takes nominative subjects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þamm(a)} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
- but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love\scsub{[nom]}\\
+ but \ac{rp}}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love\scsub{[nom]}\\
  `but the one whom little is forgiven loves little' \flushfill{Gothic, \ac{luke} 7:47, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-nom-dat}
 
 Consider the example in \ref{ex:gothic-dat-nom}, in which the internal nominative case competes against the external dative case.
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is dative, as the predicate \tit{fraþjan} `to think about' takes dative indirect objects.
-The relative pronoun \tit{þaim} `\ac{rel}.\ac{pl}.\ac{n}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þaim} `\ac{rp}}.\ac{pl}.\ac{n}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
- \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
+ \ac{rp}}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
  `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-nom}
 
 The two examples in which the nominative and the dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
@@ -212,21 +212,21 @@ There is reason to believe that this missing occurrence is due to the above ment
 \tit{Ana} `on' takes dative complements when the PP is interpreted as locational. \tit{Ana} `on' takes accusative complements when the PP is interpreted as directional. \tit{Ana þammei} `on that' in \ref{ex:gothic-acc-dat} refers to a location.
 }
 The external case is accusative, as the predicate \tit{ushafjan} `to pick up' takes accusative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{n}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þamm(a)} `\ac{rp}}.\ac{sg}.\ac{n}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in the accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
-{pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{n}.\ac{dat} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
+{pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rp}}.\ac{sg}.\ac{n}.\ac{dat} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
 `picking up that what he lay on' \flushfill{Gothic, \ac{luke} 5:25, adapted from \pgcitealt{harbert1978}{343}}\label{ex:gothic-acc-dat}
 
 Consider the example in \ref{ex:gothic-dat-acc}, in which the internal accusative case competes against the external dative case.
 The internal case is accusative, as the predicate \tit{insandjan} `to send' takes accusative objects.
 The external case is dative, as the predicate \tit{galaubjan} `to believe' takes dative objects.
-The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þamm(a)} `\ac{rp}}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in the accusative case are unattested.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
-that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
+that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rp}}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
 The two examples in which the accusative and the dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
