--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -2,36 +2,172 @@
 
 \chapter{Deriving the matching type}\label{ch:deriving-matching}
 
-Matching languages can be summarizes as in Table \ref{tbl:overview-rel-light-polish}.
+Languages of the matching type can be summarizes as in Table \ref{tbl:overview-rel-light-pol}.
 
 \begin{table}[htbp]
   \center
-  \caption{The surface pronoun with differing cases in Polish}
-\begin{tabular}{cccc}
+  \caption{Grammaticality in the internal-only type}
+\begin{tabular}{cc}
   \toprule
-                & \tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & \tsc{k}\scsub{ext} > \tsc{k}\scsub{int} &   \\
-                \cmidrule{2-3}
-matching        & *                            & *                     & Polish           \\
+                                        & surface pronoun         \\
+  \cmidrule(lr){2-2}
+\tsc{k}\scsub{int} = \tsc{k}\scsub{ext} & \tsc{rp}\scsub{int/ext} \\
+\tsc{k}\scsub{int} > \tsc{k}\scsub{ext} & *     \\
+\tsc{k}\scsub{int} < \tsc{k}\scsub{ext} & *                       \\
 \bottomrule
 \end{tabular}
-\label{tbl:overview-rel-light-polish}
+\label{tbl:overview-rel-light-pol}
 \end{table}
 
-A language of the matching type (like Polish) allows neither the internal nor the external case to surface when either of them wins the case competition. Only when the internal and external case match, there is a grammatical outcome. This means that neither the relative pronoun with a more complex internal case nor the light head with a more complex external case can be the surface pronoun. The goal of this section is to derive these properties from the way light heads and relative pronouns are spelled out in Polish.
+When the internal and the external case match, and there is a tie, the relative pronoun surfaces in the this particular case (just like in all other language types).
+When the internal case wins the case competition, this type of language does not allow the internal case to surface. This means that the relative pronoun with a more complex internal case cannot be the surface pronoun.
+When the external case wins the case competition, this type of language does not allow the external case to surface. This means that the light head with a more complex external case cannot be the surface pronoun.
 
-The section is structured as follows.
-First, I discuss the relative pronoun. I decompose it into three morphemes, and I show which features each morpheme corresponds to.
-Then I discuss the light head. I argue that Polish headless relatives are derived from light-headed relative clauses that do not surface in the language. I show that the features of the light head are spread over two morphemes. The fact that the light head has two morphemes is what leads Polish to be a matching type of language.
+The situation in which the matching type of language differs from the internal-only type is the one in which the internal case wins the case competition. This is grammatical in the internal-only type of language but it is ungrammatical in the matching type of language.
+In Chapter \ref{ch:constituent-containment}, I suggested that this difference can be derived from a difference in spellout between the two languages types. A different spellout namely leads to a different constituency within relative pronouns and light heads. In the internal-only type of language, the ϕP appears lower in the structure than the case projections, as I showed is Chapter \ref{ch:deriving-onlyinternal}. In the matching type of language, the ϕP appears higher than the case projections shown in Figure \ref{fig:rel-lh-intonly-derive}.
 
-Finally, I compare the constituents of the light head and the relative pronoun.
+\begin{figure}[htbp]
+  \center
+  \begin{tabular}[b]{ccc}
+    \toprule
+    light head & & relative pronoun \\
+    \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+    \begin{forest} boom
+    [\tsc{k}P
+        [ϕP
+            [\phantom{x}ϕ\phantom{x}, roof, baseline]
+        ]
+        [\tsc{k}P,
+            [\tsc{k}]
+        ]
+    ]
+    \end{forest}
+    & \phantom{x} &
+  \begin{forest} boom
+    [\tsc{rel}P
+        [\tsc{rel}]
+        [\tsc{k}P
+            [ϕP
+                [\phantom{x}ϕ\phantom{x}, roof, baseline]
+            ]
+            [\tsc{k}P
+                [\tsc{k}]
+            ]
+        ]
+    ]
+  \end{forest}\\
+    \bottomrule
+  \end{tabular}
+   \caption {\tsc{lh} and \tsc{rp} in the matching type}
+  \label{fig:rel-lh-matching-derive}
+\end{figure}
+
 When the internal and the external case match, the relative pronoun can delete the light head, because the light head forms a single constituent within the relative pronoun.
 When the internal case is more complex than the external case, the light head is not a single constituent within the relative pronoun anymore. The relative pronoun contains all features of the light head, but they are spread over separate constituents. As a result, there is no grammatical form to surface when the internal case is more complex.
 When the external case is more complex than the internal case, the relative pronoun is not a single constituent within the light head. The relative pronoun contains features that are not part of the light head. As a result, there is no grammatical form to surface when the internal case is more complex.
 
+In Chapter \ref{ch:constituent-containment}, I suggested that the difference in structures between the internal-only type and the matching type is a consequence of spellout. The change in constituency is a result of the fact that case projections correspond to their own morpheme in matching languages and they are spelled out together with phi-features in internal-only languages. In Chapter \ref{ch:deriving-matching}, I showed that Modern German indeed has a portmanteau for case and phi-features. In this Chapter, I show that Polish has two morphemes that corresponds to case and phi-features.
+
+I give a compact version of the Polish light heads and relative pronouns in Figure \ref{fig:rel-lh-pol}.
+
+\begin{figure}[htbp]
+  \center
+  \begin{adjustbox}{max width=\textwidth}
+  \begin{tabular}[b]{ccc}
+      \toprule
+      light head & & relative pronoun \\
+      \cmidrule(lr){1-1} \cmidrule(lr){3-3}
+      \begin{forest} boom
+        [\tsc{k}P, s sep = 15mm
+            [\tsc{an}P,
+            tikz={
+            \node[
+            draw,circle,
+            scale=0.75,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof, baseline]
+            ]
+            [\tsc{k}P,
+            tikz={
+            \node[
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{k}]
+                [\tsc{ind}P
+                    [\tsc{ind}]
+                ]
+            ]
+        ]
+      \end{forest}
+      & \phantom{x} &
+      \begin{forest} boom
+        [\tsc{rel}P
+            [\tsc{rel}P,
+            tikz={
+            \node[
+            draw,circle,
+            scale=0.75,
+            fit to=tree]{};
+            }
+                [\phantom{xxx}, roof]
+            ]
+            [\tsc{k}P, s sep = 15mm
+                [\tsc{an}P,
+                tikz={
+                \node[
+                draw,circle,
+                scale=0.75,
+                fit to=tree]{};
+                }
+                    [\phantom{xxx}, roof, baseline]
+                ]
+                [\tsc{k}P,
+                tikz={
+                \node[
+                draw,circle,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\tsc{k}]
+                    [\tsc{ind}P
+                        [\tsc{ind}]
+                    ]
+                ]
+            ]
+        ]
+      \end{forest}\\
+      \bottomrule
+  \end{tabular}
+  \end{adjustbox}
+   \caption {\tsc{lh} and \tsc{rp} in Polish}
+  \label{fig:rel-lh-pol}
+\end{figure}
+
+In what follows, I compare the light head and the relative pronoun in Figure \ref{fig:rel-lh-pol} to the light head and the relative pronoun in Figure \ref{fig:rel-lh-matching}.
+
+Consider the light head in Figure \ref{fig:rel-lh-pol}.
+Light heads in Polish are spelled out by two morphemes, which are both circled. The morpheme on the right does not only correspond to case features, but also to number feature (\tsc{ind}). The remainder of what corresponds to the ϕP is the morpheme on the left (\tsc{an}P).
+Therefore, just like the structure of the light head in Figure \ref{fig:rel-lh-matching}, the structure of the light head in Figure \ref{fig:rel-lh-pol} consists of two morphemes.
+
+Consider the relative pronoun in Figure \ref{fig:rel-lh-pol}.
+Relative pronouns in Polish contain one more morpheme than light heads: the \tsc{rel}P. As already became clear in Chapter \ref{ch:deriving-onlyinternal}, the relative pronoun contains more a single feature more than the light head, which is in Polish all contained in \tsc{rel}P. Besides that, the structure of the relative pronoun in Figure \ref{fig:rel-lh-pol} is identical to the one in Figure \ref{fig:rel-lh-matching}.
+
+Crucially, the constituency in Figure \ref{fig:rel-lh-mg} is the same as it is in Figure \ref{fig:rel-lh-intonly}. In this chapter, I take the features that are contained in the Modern German relative pronouns and light heads. I motivate that these features form the constituents shown in Figure \ref{fig:rel-lh-pol}.
+
+The section is structured as follows.
+First, I discuss the relative pronoun. According to my assumptions in Section \ref{ch:constituent-containment}, relative pronouns are part of the relative clause. I confirm this independently for Modern German with data from extraposition. I decompose the relative pronouns into the three morphemes I showed in Figure \ref{fig:rel-lh-mg}, and I show which features each of the morphemes corresponds to.
+Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the features of the light head are spread over two morphemes (the \tsc{a}P and \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
+
+Finally, I compare the constituents of the light head and the relative pronoun. I show that the relative pronoun can only delete the light head when the internal case matches the external case. When the internal and external case differ, I show that none of the elements can delete the other one.
+
+
 
 \section{The relative pronoun}\label{sec:pol-rel}
 
-In this section I discuss the internal structure of relative pronoun in Polish headless relatives. In Section \ref{sec:mg-rel} I argued that Modern German relative pronouns consist of the features given in the functional sequence in \ref{ex:pol-fseq-rel}.
+In this section I discuss the internal structure of relative pronoun in Polish headless relatives. In Chapter \ref{ch:deriving-onlyinternal} I argued that Modern German relative pronouns consist of the features given in the functional sequence in \ref{ex:pol-fseq-rel}.
 
 \ex.\label{ex:pol-fseq-rel}
 \begin{forest} boom
@@ -74,16 +210,16 @@ I discuss two relative pronouns: the animate accusative singular and the animate
 
 \ex.\label{ex:pol-rels}
 \ag. k-o-go\\
- `\tsc{rel}.\tsc{an}.\tsc{sg}.\tsc{acc}'\\
+ `\tsc{rp}.\tsc{an}.\tsc{sg}.\tsc{acc}'\\
 \bg. k-o-mu\\
- `\tsc{rel}.\tsc{an}.\tsc{sg}.\tsc{dat}'\\
+ `\tsc{rp}.\tsc{an}.\tsc{sg}.\tsc{dat}'\\
 
 I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} and the final suffix (\tit{go} and \tit{mu}). For each morpheme, I discuss which features they spell out, and I give their lexical entries. In the end, I derive the relative pronouns, of which I give the accusative here in \ref{ex:pol-spellout-rel-acc-preview} and the dative here in \ref{ex:pol-spellout-rel-dat-preview}.
 
 \ex.
 \a.\label{ex:pol-spellout-rel-acc-preview}
 \begin{adjustbox}{max width=0.8\textwidth}
-\begin{forest} boompje
+\begin{forest} boom
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
       tikz={
@@ -145,7 +281,7 @@ I decompose the relative pronouns in three morphemes: the \tit{k}, the \tit{o} a
 \end{adjustbox}
 \b. \label{ex:pol-spellout-rel-dat-preview}
 \begin{adjustbox}{max width=0.8\textwidth}
-\begin{forest} boompje
+\begin{forest} boom
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
       tikz={
@@ -388,7 +524,7 @@ I start with the operator features \tsc{wh} and \tsc{rel}. Compare the animate r
   \caption{Polish relative pronouns and demonstratives \pgcitep{swan2002}{160,171}}
   \begin{tabular}[b]{ccc}
     \toprule
-              & \tsc{rel}.\tsc{an} & \tsc{dem}.\tsc{m} \\
+              & \tsc{rp}.\tsc{an} & \tsc{dem}.\tsc{m} \\
     \cmidrule{2-3}
     \tsc{nom} & kto               & t-en               \\
     \tsc{acc} & k-ogo             & t-ego              \\
@@ -601,7 +737,7 @@ Therefore, the \tsc{prox}P is spelled out as \tit{k}. The newly created phrase i
 
 \ex.\label{ex:pol-spellout-proxp}
 \begin{adjustbox}{max width=0.9\textwidth}
-\begin{forest} boompje
+\begin{forest} boom
   [\tsc{prox}P, s sep=25mm
       [\tsc{prox}P,
       tikz={
@@ -690,7 +826,7 @@ The \tsc{acc}P is spelled out as \tit{go}, and the \tsc{acc}P is merged back to 
 
 \ex.
 \begin{adjustbox}{max width=0.9\textwidth}
-\begin{forest} boompje
+\begin{forest} boom
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
       tikz={
@@ -780,7 +916,7 @@ The \tsc{dat}P is spelled out as \tit{mu}, and the \tsc{dat}P is merged back to 
 
 \ex. \label{ex:pol-spellout-rel-dat}
 \begin{adjustbox}{max width=0.9\textwidth}
-\begin{forest} boompje
+\begin{forest} boom
   [\tsc{rel}P, s sep=30mm
       [\tsc{rel}P,
       tikz={
@@ -1049,7 +1185,7 @@ The dative animate extra light head is shown in \ref{ex:pol-elh-dat}.
 So, the light-headed relative that headless relatives are derived from is:
 
 \exg. Jan lubi [ogo] \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rel}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
 `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:pol-elh}
 
 For Modern German, I considered two kinds of light-headed relatives as the source of the headless relative.
@@ -1059,7 +1195,7 @@ For Modern German I concluded it was the second, and I proposed which features t
 In the rest of this section I consider the existing Polish light-headed relative that could potentially be the source for headless relatives. This is the light-headed relative that in which the demonstrative is the light head, as shown in \ref{ex:pol-light-headed}.
 
 \exg. Jan śpiewa to, co Maria śpiewa.\\
-Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} Maria sings\\
+Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{103}}\label{ex:pol-light-headed}
 
 For Modern German, I gave two arguments for not taking this existing light-headed relative as source of the headless relative. In what follows, I show that these arguments hold for Polish in the same way do for Modern German.
@@ -1067,13 +1203,13 @@ For Modern German, I gave two arguments for not taking this existing light-heade
 First, in headless relatives the morpheme \tit{kolwiek} `ever' can appear, as shown in \ref{ex:pol-headless-ever}.
 
 \exg. Jan śpiewa co -kolwiek Maria śpiewa.\\
-Jan sings \tsc{rel}.\tsc{an}.\tsc{acc} ever Maria sings\\
+Jan sings \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `Jan sings everything Maria sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headless-ever}
 
 Light-headed relatives do not allow this morpheme to be inserted, illustrated in \ref{ex:pol-headed-ever}.
 
 \exg. *Jan śpiewa to, co -kolwiek Maria śpiewa.\\
-Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rel}.\tsc{an}.\tsc{acc} ever Maria sings\\
+Jan sings \tsc{dem}.\tsc{m}.\tsc{sg}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} ever Maria sings\\
 `John sings what Mary sings.' \flushfill{Polish, \pgcitealt{citko2004}{116}}\label{ex:pol-headed-ever}
 
 Just like for Modern German, I assume that the headless relative is not derived from an ungrammatical structure.\footnote{
@@ -1112,7 +1248,7 @@ The internal case is accusative, as the predicate \tit{lubić} `to like' takes a
 The external case is accusative as well, as the predicate \tit{lubić} `to like' also takes accusative objects. The extra light head \tit{ogo} `\ac{elh}.\ac{an}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
 
 \exg. Jan lubi [ogo] \tbf{kogo} \tbf{-kolkwiek} \tbf{Maria} \tbf{lubi}.\\
- Jan like.\tsc{3sg}\scsub{[acc]} \tsc{dem}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rel}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
+ Jan like.\tsc{3sg}\scsub{[acc]} \tsc{dem}.\tsc{acc}.\tsc{an}.\tsc{sg}  \tsc{rp}.\tsc{acc}.\tsc{an} ever Maria like.\tsc{3sg}\scsub{[acc]}\\
  `Jan likes whoever Maria likes.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-acc-rep}
 
 In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -1175,7 +1311,7 @@ In Figure \ref{fig:polish-int=ext}, I give the syntactic structure of the extra 
       \tsc{acc} relative pronoun \tit{k-o-go}
       \\
       \cmidrule{1-1}
-      \begin{forest} boompje
+      \begin{forest} boom
         [\tsc{rel}P, s sep=20mm
             [\tsc{rel}P
                 [\phantom{x}k\phantom{x}, roof]
@@ -1250,10 +1386,10 @@ The external case is accusative, as the predicate \tit{lubić} `to like' takes a
 
 \ex.\label{ex:polish-acc-dat-rep}
 \ag. *Jan lubi [ogo] \tbf{komu} \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-rel}
 \bg. *Jan lubi ogo [\tbf{komu}] \tbf{-kolkwiek} \tbf{dokucza}.\\
-Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rel}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
+Jan like.\tsc{3sg}\scsub{[acc]} \tsc{elh}.\tsc{acc}.\tsc{an} \tsc{rp}.\tsc{dat}.\tsc{an}.\tsc{sg} ever tease.\tsc{3sg}\scsub{[dat]}\\
 `Jan likes whoever he teases.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-acc-dat-lh}
 
 In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -1319,7 +1455,7 @@ In Figure \ref{fig:polish-int-wins}, I give the syntactic structure of the extra
       \tsc{acc} relative pronoun \tit{k-o-mu}
       \\
       \cmidrule{1-1}
-      \begin{forest} boompje
+      \begin{forest} boom
         [\tsc{rel}P, s sep=15mm
             [\tsc{rel}P
                 [\phantom{x}k\phantom{x}, roof]
@@ -1404,10 +1540,10 @@ The external case is dative, as the predicate \tit{ufać} `to trust' takes dativ
 
 \ex.\label{ex:polish-dat-acc-rep}
 \ag. *Jan ufa [omu] \tbf{kogo} \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rel}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-rel}
 \bg. Jan ufa omu [\tbf{kogo}] \tbf{-kolkwiek} \tbf{wpuścil} \tbf{do} \tbf{domu}.\\
-Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rel}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
+Jan trust.\tsc{3sg}\scsub{[dat]} \tsc{elh}.\tsc{dat}.\tsc{an} \tsc{rp}.\tsc{acc}.\tsc{an} ever let.\tsc{3sg}\scsub{[acc]} to home\\
 `Jan trusts whoever he let into the house.' \flushfill{Polish, adapted from \citealt{citko2013} after \pgcitealt{himmelreich2017}{17}}\label{ex:polish-dat-acc-lh}
 
 In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
@@ -1478,7 +1614,7 @@ In Figure \ref{fig:polish-ext-wins}, I give the syntactic structure of the extra
       \tsc{acc} relative pronoun \tit{k-o-go}
       \\
       \cmidrule{1-1}
-      \begin{forest} boompje
+      \begin{forest} boom
         [\tsc{rel}P, s sep=15mm
             [\tsc{rel}P
                 [\phantom{x}k\phantom{x}, roof]
