--- a/introduction.tex
+++ b/introduction.tex
@@ -31,16 +31,16 @@ In \ref{ex:german-case-2}, the grammatical roles are reversed: \tit{der} in \tit
  `The pupil likes the teacher.'\label{ex:german-case-2}
 
 Not only full noun phrases, but also other elements can be marked for case, such as relative pronouns. Modern German marks relative pronouns, just like full noun phrases, for the grammatical role they have in the clause. Consider the two sentences in \ref{ex:german-relatives}. These two sentences both contain a main clause that is modified by a relative clause.
-In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{der} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in nominative case, because it is the descriptive subject of \tit{mögen} `to like' in the relative clause.
+In \ref{ex:german-relative-1}, the relative clause \tit{der nach draußen guckt} `that looks outside' modifies \tit{den Schüler} `the pupil'. \tit{Schüler} `pupil` is called the head (noun) or the antecedent of the relative clause. \tit{Den} in \tit{den Schüler} `the pupil` appears in accusative case, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{der} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{nom}' appears in nominative case, because it is the descriptive subject of \tit{mögen} `to like' in the relative clause.
 
-In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{den} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{suchen} `to search' in the relative clause.
+In \ref{ex:german-relative-2}, the relative clause \tit{den er beim Verstecktspiel sucht} `that he is searching for playing hide-and-seek' modifies \tit{den Schüler} `the pupil'. \tit{Den} in \tit{den Schüler} `the pupil` appears again in accusative, because it is the descriptive object of \tit{mögen} `to like' in the main clause. The relative pronoun \tit{den} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case, because it is the descriptive object of \tit{suchen} `to search' in the relative clause.
 
 \ex.\label{ex:german-relatives}
 \ag. Der Lehrer mag den Schüler, der nach draußen guckt.\\
- the.\ac{nom} teacher likes the.\ac{acc} student \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} to outside looks\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \tsc{rp}.\ac{sg}.\ac{m}.\ac{nom} to outside looks\\
  `The teacher likes the pupil that is looking outside.'\label{ex:german-relative-1}
  \bg. Der Lehrer mag den Schüler, den er beim Versteckspiel sucht.\\
- the.\ac{nom} teacher likes the.\ac{acc} student \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} he {at the} {hide-and-seek game} searches\\
+ the.\ac{nom} teacher likes the.\ac{acc} student \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc} he {at the} {hide-and-seek game} searches\\
  `The teacher likes the pupil that he is searching for playing hide-and-seek.'\label{ex:german-relative-2}
 
 Compare the two sentences in \ref{ex:german-relatives}. In both sentences the head is marked as accusative because it is the descriptive object in the main clause. The case of the relative pronoun in \ref{ex:german-relative-2} is also accusative, because it is the descriptive object in the relative clause. The case of the relative pronoun in \ref{ex:german-relative-1} is nominative, because it is the descriptive subject in the relative clause. So, the case of the relative pronoun in \ref{ex:german-relative-1} differs from the case of the head.
@@ -53,21 +53,21 @@ Even though Modern German also has case competition in headless relatives, I tur
 I give an example of a headless relative in Gothic in \ref{ex:gothic-acc-acc}.
 There is no head that this relative clause modifies, because it is a headless relative. This is different from the examples from German I gave above, which each had a head.
 The predicate \tit{arman} `to pity' takes accusative objects, as indicated by the subscript on the gloss of the verb. The predicate \tit{gaarman} `to pity' also takes accusative objects, indicated again by the subscript.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case.\footnote{
+The relative pronoun \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative case.\footnote{
 The relative pronoun without the complementizer \tit{-ei} is \tit{þana}. Therefore, I refer to the relative pronoun as \tit{þan(a)}.
 }
 
 \exg. gaarma þan -ei arma\\
- pity.\ac{pres}.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.\ac{pres}.1\ac{sg}\scsub{[acc]}\\
+ pity.\ac{pres}.1\ac{sg}\scsub{[acc]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.\ac{pres}.1\ac{sg}\scsub{[acc]}\\
  `I pity him whom I pity' \flushfill{Gothic, \ac{rom} 9:15, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc}
 
-Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity'. From now on, I use the terms internal and external case to refer to these two possible case sources. Now there are three logical possibilities for the source of the accusative case on \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' in \ref{ex:gothic-acc-acc}: the internal case, the external case, or both.
+Where does this accusative case come from? Logically speaking, there are two possible sources: the predicate in the main clause \tit{gaarman} `to pity', the predicate in the relative clause \tit{arman} `to pity'. From now on, I use the terms internal and external case to refer to these two possible case sources. Now there are three logical possibilities for the source of the accusative case on \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' in \ref{ex:gothic-acc-acc}: the internal case, the external case, or both.
 
 Internal case refers to the case associated with the relative pronoun internal to the relative clause. More precisely, it is the case, which is associated with the grammatical role that the relative pronoun has internal to the relative clause. In \ref{ex:gothic-acc-acc}, the relative pronoun is the descriptive object of \tit{arman} `to pity'. The predicate \tit{arman} `to pity' takes accusative objects. So, the internal case is accusative.
 
 External case refers to the case associated with the missing head in the main clause, which is external to the relative clause. Concretely, it is the case which is associated with the grammatical role that the missing head has external to the relative clause. In \ref{ex:gothic-acc-acc}, the missing head is the descriptive object of \tit{gaarman} `to pity'. The predicate \tit{gaarman} `to pity' takes accusative objects. In \ref{ex:gothic-acc-acc}, the external case is accusative.
 
-Now I return to the question where \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
+Now I return to the question where \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' in \ref{ex:gothic-acc-acc} got its case from. In the remainder of this section I show evidence for the claim that the relative pronoun is sensitive to both the internal and the external case.
 This is easy to imagine for the internal case: the internal case reflects the grammatical role of the relative clause. It is a bit more complicated for the external case. The external case is associated with the grammatical role of the missing head in the main clause. The idea is going to be that the external case cannot be reflected on a non-existing head. Indirectly, it appears on the relative pronoun.\footnote{
 Later on I will argue that this indirect process is actually a deletion operation.
 }
@@ -76,10 +76,10 @@ This means that the internal and external case come together on the relative pro
 Consider the example in \ref{ex:gothic-acc-nom}, in which the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicate \tit{frijon} `to love' takes accusative objects, as indicated by the subscript on the predicate.
 The external case is accusative. The predicate \tit{wisan} `to be' takes nominative subjects, indicated by the subscript on the predicate.
-The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative. This accusative can only come from the predicate \tit{frijon} `to love', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
+The relative pronoun \tit{þan(a)} `\tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}' appears in accusative. This accusative can only come from the predicate \tit{frijon} `to love', which is the internal case here. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
- \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
+ \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
  `the one whom you love is sick' \flushfill{Gothic, \ac{john} 11:3, adapted from \pgcitealt{harbert1978}{342}}\label{ex:gothic-acc-nom}
 
 The conclusion that follows is that the relative pronoun can take the internal case. At this point it remains unclear what happened to the external nominative case.
@@ -87,10 +87,10 @@ The conclusion that follows is that the relative pronoun can take the internal c
 Now consider the example in \ref{ex:gothic-nom-acc}, in which the internal case is nominative and the external case is accusative.
 The internal case is nominative. The predicate \tit{wisan} `to be' takes nominative subjects, as indicated by the subscript on the predicate.
 The external case is accusative. The predicate \tit{ussiggwan} `to read' takes accusative objects, as indicated by the subscript on the predicate.
-The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
+The relative pronoun \tit{þo} `\tsc{rp}.\ac{sg}.\ac{n}.\ac{acc}' appears in the accusative case. This accusative can only come from the predicate \tit{ussiggwan} `to read', which is the external case here. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
- and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
+ and \tsc{rp}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
  `and you read the one which is from Laodicea' \flushfill{Gothic, \ac{col} 4:16, adapted from \pgcitealt{harbert1978}{357}}\label{ex:gothic-nom-acc}
 
 The conclusion that follows is that the relative pronoun can take the external case. At this point it remains unclear what happened to the internal nominative case.
@@ -135,7 +135,7 @@ For a long time it has been noted that syncretism seems to resolve case conflict
 A language like Polish, that normally doesn't allow for any case mismatches, even allows for it. In this dissertation I do not offer a detailed account for what a derivation looks like.
 
 \exg. Jan unika kogokolwiek wczoraj obraził.\\
-Jan avoid.3\ac{sg}\scsub{[gen]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc}/\ac{gen} yesterday offend.3\ac{sg}.\ac{pst}\scsub{[acc]}.\\
+Jan avoid.3\ac{sg}\scsub{[gen]} \tsc{rp}.\ac{sg}.\ac{m}.\ac{acc}/\ac{gen} yesterday offend.3\ac{sg}.\ac{pst}\scsub{[acc]}.\\
 `Jan avoided whoever he offended yesterday.'
 
 I won't talk about the details.
